Supposedly fix zoom on double tap on mobile

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -4,6 +4,7 @@
     width: 100%
     height: 100%
     padding: 0px 15px 45px 15px
+    touch-action: manipulation
 
 section
     display: grid
@@ -16,10 +17,6 @@ section
 
     @media screen and ( max-width: 500px)
         align-self: end
-        // transform: translateY(0%)
-        // top: inherit
-        // bottom: 0px
-        // top: 60%
 
 h1
     font-size: 35px
